...
                        android:layout_height="wrap_content"
                        android:textStyle="bold|italic"
                        android:textColor="@color/black"
                        android:text="Organizacion" />

                    <TextView
                        android:id="@+id/textViewOrganization"
                        android:layout_width="261dp"
                        android:layout_height="wrap_content"
                        android:paddingStart="8dp"
                        android:paddingTop="3dp"
                        android:paddingEnd="8dp"
                        android:paddingBottom="5dp"
...
                    android:paddingTop="3dp"
                    android:paddingEnd="5dp"
                    android:paddingBottom="2dp"
                    tools:text="@string/bdate"
                    android:textColor="@color/black"
                    android:textStyle="bold|italic"
                    android:text="Nombre" />

                    <TextView
                        android:id="@+id/textViewName"
                        android:layout_width="192dp"
                        android:layout_height="wrap_content"
                        android:paddingStart="8dp"
...
