...
        android:layout_gravity="bottom"
        android:layout_height="match_parent"
        tools:listitem="@layout/album_item"
        android:paddingTop="50dp"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:itemBackground="@color/blue"

        app:menu="@menu/bottom_navigation_menu"
        android:layout_gravity="bottom"/>
...
