package com.team.vinylos;

import static androidx.test.espresso.Espresso.onData;
import static androidx.test.espresso.Espresso.onView;
import static androidx.test.espresso.action.ViewActions.click;
import static androidx.test.espresso.action.ViewActions.scrollTo;
import static androidx.test.espresso.action.ViewActions.typeText;
import static androidx.test.espresso.assertion.ViewAssertions.matches;
import static androidx.test.espresso.matcher.ViewMatchers.hasBackground;
import static androidx.test.espresso.matcher.ViewMatchers.isDisplayed;
import static androidx.test.espresso.matcher.ViewMatchers.withId;
import static androidx.test.espresso.matcher.ViewMatchers.withSpinnerText;
import static androidx.test.espresso.matcher.ViewMatchers.withText;
import static org.hamcrest.CoreMatchers.containsString;
import static org.hamcrest.CoreMatchers.instanceOf;
import static org.hamcrest.CoreMatchers.is;
import static org.hamcrest.CoreMatchers.startsWith;
import static org.hamcrest.Matchers.allOf;
import static org.junit.Assert.assertEquals;

import android.content.Context;
import android.os.SystemClock;
import android.view.View;

import androidx.test.InstrumentationRegistry;
import androidx.test.espresso.ViewInteraction;
import androidx.test.espresso.action.ViewActions;
import androidx.test.espresso.matcher.ViewMatchers;
import androidx.test.ext.junit.rules.ActivityScenarioRule;
import androidx.test.filters.LargeTest;
import androidx.test.runner.AndroidJUnit4;

import com.team.vinylos.ui.MainActivity;

import org.hamcrest.Description;
import org.hamcrest.Matcher;
import org.hamcrest.TypeSafeMatcher;
import org.junit.Before;
import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;

@LargeTest
@RunWith(AndroidJUnit4.class)
public class Test3PrizesCreateValidation {

    @Rule
    public ActivityScenarioRule<MainActivity> mActivityTestRule = new ActivityScenarioRule<>(MainActivity.class);

    @Before
    public void useAppContext() {
        // Context of the app under test.
        // Context of the app under test.
        Context appContext = InstrumentationRegistry.getTargetContext();
        assertEquals("com.team.vinylos", appContext.getPackageName());

        ViewInteraction skipBtn = onView(withText("Vinilos, Tu app de música favorita")).check(matches(isDisplayed()));

        ViewInteraction toolBar = onView(allOf(withId(R.id.bottom_navigation),withId(R.id.bottom_navigation),isDisplayed()));

        ViewInteraction menu1 = onView(withId(R.id.prizes));
        menu1.perform(click());

        SystemClock.sleep(1500);

        //ViewInteraction album1 = onView(withText("Poeta del pueblo")).check(matches(isDisplayed()));

        //validar que muestre la palabra Nombre de cada premio mostrado
        ViewInteraction namePrize = onView(allOf(withText("Nombre")));

        //validar Vista de Premios
        ViewInteraction textViews = onView(allOf(withId(R.id.textViewOrganization)));
    }

    //Escenario 1: entrar a la aplicacion, ver la lista de premios, intentar crear un premio con nombre vacio y verificar que se muestra el mensaje de error
    @Test
    public void Escenario1() {
        //Desplegar pantalla para creación de Premio
        ViewInteraction newPrize = onView(withId(R.id.createPrizeButton));
        newPrize.perform(click());
        SystemClock.sleep(1500);


        //onView(withId(R.id.prizeName)).perform(typeText("Premio de Prueba"));
        onView(withId(R.id.prizeOrganization)).perform(typeText("Organizacion de prueba"));
        onView(withId(R.id.prizeDescription)).perform(typeText("Premi entregado desde el 2010 a los mejores albumes del mes"));

        onView(ViewMatchers.isRoot()).perform(ViewActions.closeSoftKeyboard());
        onView(withId(R.id.createPrizeButton)).perform(scrollTo(), click());

        //validar que muestre el error
        ViewInteraction error = onView(allOf(withText(startsWith("Debes ingresar el nombre del premio"))));

        SystemClock.sleep(5000);

    }

    //Escenario 2: entrar a la aplicacion, ver la lista de premios, intentar crear un premio con organizacion vacia y verificar que se muestra el mensaje de error
    @Test
    public void Escenario2() {
        //Desplegar pantalla para creación de Premio
        ViewInteraction newPrize = onView(withId(R.id.createPrizeButton));
        newPrize.perform(click());
        SystemClock.sleep(1500);


        onView(withId(R.id.prizeName)).perform(typeText("Premio de Prueba"));
        //onView(withId(R.id.prizeOrganization)).perform(typeText("Organizacion de prueba"));
        onView(withId(R.id.prizeDescription)).perform(typeText("Premi entregado desde el 2010 a los mejores albumes del mes"));

        onView(ViewMatchers.isRoot()).perform(ViewActions.closeSoftKeyboard());
        onView(withId(R.id.createPrizeButton)).perform(scrollTo(), click());

        //validar que muestre el error
        ViewInteraction error = onView(allOf(withText(startsWith("Debes ingresar el nombre de la organizacion del premio"))));

        SystemClock.sleep(5000);

    }

    //Escenario 3: entrar a la aplicacion, ver la lista de premios, intentar crear un premio con descripción vacia y verificar que se muestra el mensaje de error
    @Test
    public void Escenario3() {
        //Desplegar pantalla para creación de Premio
        ViewInteraction newPrize = onView(withId(R.id.createPrizeButton));
        newPrize.perform(click());
        SystemClock.sleep(1500);


        onView(withId(R.id.prizeName)).perform(typeText("Premio de Prueba"));
        onView(withId(R.id.prizeOrganization)).perform(typeText("Organizacion de prueba"));
        //onView(withId(R.id.prizeDescription)).perform(typeText("Premi entregado desde el 2010 a los mejores albumes del mes"));

        onView(ViewMatchers.isRoot()).perform(ViewActions.closeSoftKeyboard());
        onView(withId(R.id.createPrizeButton)).perform(scrollTo(), click());

        //validar que muestre el error
        ViewInteraction error = onView(allOf(withText(startsWith("Debes ingresar una descripcion del premio"))));

        SystemClock.sleep(5000);

    }

    public static Matcher<View> withIndex(final Matcher<View> matcher, final int index) {
        return new TypeSafeMatcher<View>() {
            int currentIndex = 0;

            @Override
            public void describeTo(Description description) {
                description.appendText("with index: ");
                description.appendValue(index);
                matcher.describeTo(description);
            }

            @Override
            public boolean matchesSafely(View view) {
                return matcher.matches(view) && currentIndex++ == index;
            }
        };
    }

}

